[project]

name = "shandy-sqlfmt"
version = "0.29.0"
requires-python = ">=3.10"
description = "sqlfmt formats your dbt SQL files so you don't have to."
authors = [
    { name = "Ted Conbeer", email = "tconbeer@users.noreply.github.com" }
]
license = "Apache-2.0"
readme = "README.md"
classifiers = [
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: SQL",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.0,<9",
    "tqdm>=4.67,<5",
    "platformdirs>=2.4,<5.0",
    "tomli>=2.0,<3; python_version < '3.11'",
    "jinja2>=3.0,<4",
]


[project.optional-dependencies]

jinjafmt = ["black>=24"]


[dependency-groups]
dev = [
    "pre-commit>=4.5,<5",
    "snakeviz>=2.1.1,<3",
]
static = [
    "ruff>=0.14.1",
    "mypy>=1.14.1,<2",
    "gitpython==3.1.46",
    "black==25.12.0",
]
test = [
    "black==25.12.0",
    "pytest>=9,<10",
    "pytest-cov>=7,<8",
    "click>=8.3,<9",
]
primer = [
    "gitpython==3.1.46",
    "black==25.12.0",
]


[project.urls]

Homepage = "https://sqlfmt.com"
Repository = "https://github.com/tconbeer/sqlfmt"
Documentation = "https://docs.sqlfmt.com"
"Bug Tracker" = "https://github.com/tconbeer/sqlfmt/issues"
Changelog = "https://github.com/tconbeer/sqlfmt/blob/main/CHANGELOG.md"


[project.scripts]

sqlfmt = "sqlfmt.cli:sqlfmt"
sqlfmt_primer = "sqlfmt_primer.primer:sqlfmt_primer"


[build-system]

requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]

packages = [
    "src/sqlfmt",
]

[tool.hatch.build.targets.sdist]

only-include = [
    "src",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
    "pyproject.toml"
]


[tool.ruff]

target-version = "py310"


[tool.ruff.lint]

select = ["A", "B", "E", "F", "I"]


[tool.mypy]

python_version = "3.10"
files = [
    "src/**/*.py",
    "tests/**/*.py",
]
mypy_path = "stubs,src"

show_column_numbers = true

# show error messages from unrelated files
follow_imports = "normal"

# be strict
disallow_untyped_calls = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
strict_optional = true

warn_return_any = true
warn_no_return = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true

no_implicit_reexport = true
strict_equality = true
